Adicionado o user-secret do .net, configurado os dados sensíveis do appsettings no user-secret.

--- a/Manager.Api/Manager.Api.csproj
+++ b/Manager.Api/Manager.Api.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
+    <UserSecretsId>6a3ffe48-7f6a-48f7-9007-e6954f9dcdd8</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
